# djangoX

./: README.md  pyproject.toml
djangox/: pyvenv.cfg
snacks/: admin.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
templates/snacks/: snack_detail.html
